style: Fix select input alignment on Send SMS page

--- a/assets/src/admin/modules/_send-sms-page.scss
+++ b/assets/src/admin/modules/_send-sms-page.scss
@@ -589,6 +589,7 @@ body.sms_page_wp-sms .wpsms-wrap .wpsms-sendsms {
         border-radius: 4px;
         color: #262626;
         font-size: 14px;
+        padding: 0;
 
         .select2-selection__rendered {
           padding: 12px;
